fix bootstrap card shadows + borders + gaps

--- a/PhotographyWebsite/src/app/testimonials/testimonials.component.scss
+++ b/PhotographyWebsite/src/app/testimonials/testimonials.component.scss
@@ -5,7 +5,9 @@
 
 .card {
   border: none;
+
   img {
+    box-shadow: 1px 2px 3px darkgrey;
     width: 100%;
     height: 100%;
     border-top-left-radius: 0.25rem;
@@ -26,6 +28,7 @@
   border-right: 1px solid black;
   border-bottom-left-radius: 0.25rem;
   border-bottom-right-radius: 0.25rem;
+  box-shadow: 1px 2px 3px darkgrey;
 }
 
 .rating {
